--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -170,3 +170,88 @@ body {
   border-radius: 100%;
   background-color: #23a6f0;
 }
+
+.testimonials {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 15rem;
+}
+
+.container-testimonials {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 4rem 0;
+  gap: 8rem;
+}
+
+.testimonials-heading {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.testimonials-heading {
+  font-size: 1.8rem;
+}
+
+.testimonials-heading > p {
+  font-size: 0.8rem;
+}
+
+.user-testimonial {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #737373;
+}
+
+.testimonial-card > img {
+  width: 9.6rem;
+}
+
+.testimonial-card {
+  display: flex;
+  padding: 4rem 4rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  background-color: #fff;
+  width: 74rem;
+  border-radius: 0.5rem;
+  border: 0.1rem solid #dedede;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.card-content > p {
+  text-align: center;
+  /* font-size: rem; */
+  font-weight: 500;
+}
+
+.testimonial-name {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.testimonial-name > h3 {
+  color: #252B42;
+  font-size: 2rem;
+}
+
+.testimonial-name > p {
+  font-size: 1rem;
+  font-weight: 600;
+}
