--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -191,9 +191,6 @@ body {
   gap: 1rem;
   text-align: center;
   margin: 0 auto;
-}
-
-.testimonials-heading {
   font-size: 1.8rem;
 }
 
@@ -214,7 +211,7 @@ body {
 
 .testimonial-card {
   display: flex;
-  padding: 4rem 4rem;
+  padding: 4rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -235,7 +232,6 @@ body {
 
 .card-content > p {
   text-align: center;
-  /* font-size: rem; */
   font-weight: 500;
 }
 
@@ -247,7 +243,7 @@ body {
 }
 
 .testimonial-name > h3 {
-  color: #252B42;
+  color: #252b42;
   font-size: 2rem;
 }
 
