--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -185,7 +185,8 @@ body {
   gap: 8rem;
 }
 
-.testimonials-heading {
+.testimonials-heading,
+.faq-heading {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -194,7 +195,8 @@ body {
   font-size: 1.8rem;
 }
 
-.testimonials-heading > p {
+.testimonials-heading > p,
+.faq-heading > p {
   font-size: 0.8rem;
 }
 
@@ -250,4 +252,57 @@ body {
 .testimonial-name > p {
   font-size: 1rem;
   font-weight: 600;
+}
+
+.faq {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 15rem;
+}
+
+.container-faq {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  padding: 8rem 0;
+}
+
+.faq-cards {
+  display: grid;
+  grid-template-columns: 28rem 28rem 28rem;
+  grid-template-rows: 15rem 15rem 15rem;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.faq-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.8rem;
+  background-color: #fff;
+}
+
+.faq-flex-row {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.faq-text-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+
+.faq-text-content > h5 {
+  color: #252b42;
+  font-size: 1.4rem;
+}
+
+.faq-text-content > h6 {
+  color: #737373;
+  font-size: 1rem;
+  line-height: 2;
 }
