--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+
+/* 16px -> 1rem */
+
 * {
   padding: 0;
   margin: 0;
@@ -12,297 +15,126 @@ body {
   color: #fff;
 }
 
-.header {
+.nav-container {
   display: flex;
-  flex-direction: column;
+  max-width: 82rem;
+  margin: 0 auto;
+  padding: 1rem 8.5rem;
+  gap: 2.5rem;
+}
+
+.logo {
+  display: flex;
+  max-width: 10rem;
+  padding: 0.8rem 2.5rem 0.8rem 0rem;
   align-items: center;
+  cursor: pointer;
+}
+
+.logo > h3 {
+  font-size: 1.5rem;
 }
 
 .navbar {
   display: flex;
-  align-items: center;
-  padding: 1rem 10rem;
-  gap: 4rem;
-}
-
-.navbar-brand {
-  display: flex;
-  align-items: flex-start;
-  padding: 1rem 4rem 1rem 0;
-}
-
-.navbar-brand > h3 {
-  font-size: 2rem;
-  font-weight: 700;
-}
-
-.navbar-collapse {
-  font-weight: 600;
-  display: flex;
-  padding: 0.3rem 0;
   justify-content: center;
   align-items: center;
-  gap: 18.5rem;
+  padding: 0.2rem 0rem;
+  gap: 14rem;
 }
 
-.navbar-nav {
+.nav-links {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.link,
+.link > a,
+.btn-text {
+  list-style-type: none;
+  text-decoration: none;
+  color: #fff;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+.account {
   display: flex;
   align-items: center;
   gap: 2rem;
 }
 
-.navbar-nav > li {
-  list-style-type: none;
-}
-
-.navbar-nav a,
-.navbar-nav-login a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.navbar-nav-login {
-  display: flex;
-  align-items: center;
-  gap: 4.5rem;
-}
-
 .btn {
-  font-weight: 600;
-  font-size: 1rem;
   display: inline-flex;
-  padding: 1.5rem 2.5rem;
-  align-items: center;
-  gap: 1.5rem;
-  border: none;
-  border-radius: 0.5rem;
   background-color: #23a6f0;
-  color: #fff;
-}
-
-.row {
-  display: flex;
-  justify-content: flex-end;
+  padding: 0.9375rem 1.5625rem;
+  gap: 0.8rem;
   align-items: center;
-  gap: 3rem;
+  border: none;
+  border-radius: 0.3rem;
 }
 
-.col-headline {
+.btn:hover {
+  background-color: #2a7cc7;
+  cursor: pointer;
+}
+
+.header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-row {
+  display: flex;
+  max-width: 90rem;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  gap: 2rem;
+}
+
+.header-text-content {
   display: flex;
   flex-direction: column;
-  width: 57.3rem;
-  gap: 3rem;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+  max-width: 35rem;
 }
 
-#headline {
-  font-size: 5.4rem;
+.header-text-content > h1 {
+  font-size: 3.5rem;
+  font-weight: 800;
+  line-height: 5rem;
 }
 
-.col-headline > h4 {
-  /* font-size: 1rem; */
+.header-text-content > h4 {
+  font-size: 1rem;
   font-weight: 500;
+  max-width: 20rem;
 }
 
 .cta {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .btn-round {
-  border-radius: 3.7rem;
+  border-radius: 2rem;
 }
 
 .btn-outline {
   background-color: inherit;
-  border: 0.1rem solid #fff;
+  border: 1px solid #fff;
 }
 
-.features {
-  display: flex;
-  flex-direction: column;
-  padding: 5rem 15rem;
-}
-
-.feature-heading {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 2rem 5rem 2rem 0;
-}
-
-.feature-heading > h2 {
-  font-size: 2.5rem;
-}
-
-.feature-heading > p {
-  font-size: 0.8rem;
-}
-
-.row-cards {
+.image {
   display: flex;
   align-items: center;
-  gap: 3rem;
 }
 
-.container-card {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-
-.card {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  padding: 2rem;
-  background-color: #fff;
-  color: #737373;
-  width: 32.8rem;
-  font-size: 1.4rem;
-}
-
-.icn-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 7.6rem;
-  height: 7.6rem;
-  border-radius: 100%;
-  background-color: #23a6f0;
-}
-
-.testimonials {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem 15rem;
-}
-
-.container-testimonials {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 4rem 0;
-  gap: 8rem;
-}
-
-.testimonials-heading,
-.faq-heading {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  text-align: center;
-  margin: 0 auto;
-  font-size: 1.8rem;
-}
-
-.testimonials-heading > p,
-.faq-heading > p {
-  font-size: 0.8rem;
-}
-
-.user-testimonial {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #737373;
-}
-
-.testimonial-card > img {
-  width: 9.6rem;
-}
-
-.testimonial-card {
-  display: flex;
-  padding: 4rem;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  background-color: #fff;
-  width: 74rem;
-  border-radius: 0.5rem;
-  border: 0.1rem solid #dedede;
-}
-
-.card-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-
-.card-content > p {
-  text-align: center;
-  font-weight: 500;
-}
-
-.testimonial-name {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-}
-
-.testimonial-name > h3 {
-  color: #252b42;
-  font-size: 2rem;
-}
-
-.testimonial-name > p {
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.faq {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem 15rem;
-}
-
-.container-faq {
-  display: flex;
-  flex-direction: column;
-  gap: 5rem;
-  padding: 8rem 0;
-}
-
-.faq-cards {
-  display: grid;
-  grid-template-columns: 28rem 28rem 28rem;
-  grid-template-rows: 15rem 15rem 15rem;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.faq-card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.8rem;
-  background-color: #fff;
-}
-
-.faq-flex-row {
-  display: flex;
-  align-items: flex-start;
-  gap: 1rem;
-}
-
-.faq-text-content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0.5rem;
-}
-
-.faq-text-content > h5 {
-  color: #252b42;
-  font-size: 1.4rem;
-}
-
-.faq-text-content > h6 {
-  color: #737373;
-  font-size: 1rem;
-  line-height: 2;
+.image > img {
+  max-width: 45rem;
 }
