--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-
 /* 16px -> 1rem */
 
 * {
@@ -26,7 +25,7 @@ body {
 .logo {
   display: flex;
   max-width: 10rem;
-  padding: 0.8rem 2.5rem 0.8rem 0rem;
+  padding: 0.8rem 2.5rem 0.8rem 0;
   align-items: center;
   cursor: pointer;
 }
@@ -39,7 +38,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.2rem 0rem;
+  padding: 0.2rem 0;
   gap: 14rem;
 }
 
