--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -226,3 +226,64 @@ body {
   color: #737373;
   font-size: 1rem;
 }
+
+.testimonial-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 82rem;
+  margin: 0 auto;
+  padding: 5rem 8.5rem;
+  gap: 2.5rem;
+}
+
+.testimonial-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 36rem;
+  gap: 0.6rem;
+}
+
+.testimonial-text-container > p {
+  text-align: center;
+  display: inline;
+}
+
+.testimonial-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.5rem 10rem;
+  gap: 1.5rem;
+  max-width: 46rem;
+  background-color: #fff;
+  color: #737373;
+}
+
+.testimonial-card-content {
+  display: flex;
+  flex-direction: column;
+  max-width: 27rem;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.user-credential {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.user-credential > h3 {
+  color: #252B42;
+}
+
+.testimonial-card-content > p {
+  font-size: 0.8rem;
+  text-align: center;
+}
